	- Fixed a permissions bug with the configure command.
2018-06-23
	- Removed a bit of voice-related code that did literally nothing.	
2018-06-28
	- Keys are now detected with message edits.
2018-06-28
	- Command added for accessing the github repo for the bot.
2018-06-29
	- Key related commands are now all under one single command. 
2018-07-19
	- New exception handler. 
	- New way for searching for users by ID, name, nickname, or direct mention. 
2018-07-19
	- Very basic message counting implementation. 
2018-07-19
	- Message stats, including reactions given, recieved, and images sent. Fixed a bug.
2018-08-21
	- Watched users and voice state changes.
2018-08-22
	- Fix trailing commas 
2018-08-24 
	- Small change to user searching
2018-08-24
	- Merged uinfo and stats into just uinfo, also prettified it a little bit.
2018-08-24
	- Code optimization and cleanup
2018-08-25
	- Updated behavior of NSFW command
2018-08-25
	- Visual changes to voice logging 
	- Fixed a typo
2018-08-26
	- Added a timestamp to voice activity logging
2018-08-26
	- Better voice timestamp formatting
2018-08-28
	- Fixed a small bug where the minutes section in voice logging was actually the month
2018-08-31
	- Quick, rudimentary patch to allow for a more intuitive way to add voice watch users.
2018-09-03
	- Added role ping watching, and the "reactify" function. (A reaction-based menu system.)
2018-09-03
	- Boolean option for reactify, cleaned stop command.
2018-09-04
	- Toggles option for reactify
	- Reworked configuration command
	- Made reactify output more consistent 
2018-09-06
	- Fixed a bug where a user muting or deafening would trigger the voice log
2018-09-22
	- Added excluded channels, which won't detect watch keys said within them.
2018-09-22
	- Adjusted default embed color, adjusted other colors.
2018-09-23
	- Fixed a bug where having > 9 pingable roles would cause an error
2018-09-30
	- Now tracking deleted messages.
2018-10-15
	- Quote additions now wait for confirmation.